welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:10: error: not found: value k
		if (max==nums(k)){
                              ^indexOfMaxValue:11: error: not found: value k
			return k
                               ^indexOfMaxValue:9: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to n-1){
               ^